Upgrade to 3.15 and update documentation